[project]
name = ""
version = ""
description = ""
authors = [
    {name = "hex benjamin", email = "hex@hexbenjam.in"},
]
dependencies = [
    "gradpyent>=0.2.1",
    "Pillow>=10.1.0",
    "notebook>=7.0.6",
    "matplotlib>=3.8.0",
    "rich>=13.6.0",
    "colour>=0.1.5",
    "opencv-python>=4.8.1.78",
    "streamlit>=1.27.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

